fix images overlaping on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -450,7 +450,7 @@ form {
             justify-content: center;
             margin-bottom: 3vh;
             
-            @media screen and (max-width: 768px) {
+            @media screen and (max-width: 1280px) {
                 img {
                     width: 100%;
                 }
@@ -479,6 +479,7 @@ form {
                     z-index: -1;
                     left: -25vw;
                     top: -10vh;
+                    height: 110vh;
                     
                     @media screen and (max-width: 768px) {
                         display: none;
